E2 PR3b: seed sections 9-10 + SeedMain (E2.15) (#15)
* feat(db): E2 PR3b - seed sections 9 and 10, SeedMain, and the 21003 author fix (E2.15)

* docs(reports): E2 PR3b report

* docs(reports): E2 PR3b - tick CI green